--- a/src/main/resources/Fxml/DeckMenu.fxml
+++ b/src/main/resources/Fxml/DeckMenu.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
@@ -21,7 +22,7 @@
             <Font size="28.0" />
          </font>
       </Button>
-      <Button layoutX="1220.0" layoutY="853.0" mnemonicParsing="false" onAction="#setCreateDeck" prefHeight="59.0" prefWidth="250.0" style="-fx-cursor: hand; -fx-background-color: #0b87bc;" text="create deck" textFill="WHITE">
+      <Button layoutX="1220.0" layoutY="853.0" mnemonicParsing="false" onAction="#handleCreateDeck" prefHeight="59.0" prefWidth="250.0" style="-fx-cursor: hand; -fx-background-color: #0b87bc;" text="create deck" textFill="WHITE">
          <font>
             <Font size="28.0" />
          </font>
@@ -31,5 +32,10 @@
             <Font size="28.0" />
          </font>
       </Button>
+      <Label fx:id="apiLog" layoutX="627.0" layoutY="921.0" prefHeight="56.0" textFill="WHITE">
+         <font>
+            <Font size="26.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
